--- a/Crop_wav.ipynb
+++ b/Crop_wav.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,9 @@
     "import ipywidgets as widgets\n",
     "import soundfile as sf\n",
     "import yaml\n",
-    "import math"
+    "import math\n",
+    "import datetime\n",
+    "import time"
    ]
   },
   {
@@ -41,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d227528ec448451fa90a66f4501600c2",
+       "model_id": "6e50a1f66fe64fe3beba6832c48381d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +112,7 @@
        "'2017-02-04--10-14-06--00-16-35--BC_2'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,89 +187,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    842.0\n",
-       "1    849.0\n",
-       "2    857.0\n",
-       "3    871.0\n",
-       "4    879.0\n",
-       "5    927.0\n",
-       "6    953.0\n",
-       "7    972.0\n",
-       "Name: onset, dtype: float64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "round(time_stamps.onset)\n"
+    "### Start time in seconds since epoch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    842\n",
-       "1    849\n",
-       "2    856\n",
-       "3    870\n",
-       "4    879\n",
-       "5    926\n",
-       "6    952\n",
-       "7    971\n",
-       "Name: onset, dtype: int64"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "time_stamps.onset.apply(lambda x: math.floor(x))"
+    "start_datetime_str=recording_name[:20]\n",
+    "start_datetime_abs=datetime.datetime.strptime(start_datetime_str, '%Y-%m-%d--%H-%M-%S').timestamp()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -280,15 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "time_stamps.onset=time_stamps.onset.apply(lambda x: math.floor(x)) # Round down\n",
-    "time_stamps.offset=time_stamps.offset.apply(lambda x: math.ceil(x)) # Round up and + 1 \n",
+    "time_stamps.offset=time_stamps.offset.apply(lambda x: math.ceil(x)) # Round up \n",
     "\n",
     "time_stamps['onset_samples']=time_stamps.onset.apply(lambda x: x*sr) \n",
-    "time_stamps['offset_samples']=time_stamps.offset.apply(lambda x: x*sr + 1)"
+    "time_stamps['offset_samples']=time_stamps.offset.apply(lambda x: x*sr) "
    ]
   },
   {
@@ -300,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,11 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_stamps['call_wav']=time_stamps.apply(lambda x: crop_call(x, y, sr, recording_name), axis=1)"
+    "time_stamps['call_wav_file']=time_stamps.apply(lambda x: crop_call(x, y, sr, recording_name), axis=1)"
    ]
   },
   {
@@ -351,37 +285,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def prep_metadata(time_stamps, sample_rate, ref_value, cal_value, researcher):\n",
     "    meta_df=pd.DataFrame()\n",
     "    \n",
-    "    meta_df['segment_file']=time_stamps.apply(lambda x: x.call_wav.split('/')[-1], axis=1)\n",
-    "    meta_df['wav_origin']=time_stamps.apply(lambda x: x.call_wav.split('/')[-1].split('_')[0] + '.wav', axis=1)\n",
-    "    meta_df['onset_seconds']=time_stamps.onset\n",
-    "    meta_df['offset_seconds']=time_stamps.offset\n",
-    "    meta_df['duration_seconds']=time_stamps.offset-time_stamps.onset \n",
+    "    meta_df['segment_file']=time_stamps.apply(lambda x: x.call_wav_file.split('/')[-1], axis=1)\n",
+    "    meta_df['wav_origin']=time_stamps.apply(lambda x: x.call_wav_file.split('/')[-1].split('_')[0] + '.wav', axis=1)\n",
+    "    \n",
+    "    meta_df['sample_rate']=pd.Series([sample_rate]*len(time_stamps))\n",
+    "    meta_df['reference_value']=pd.Series([ref_value]*len(time_stamps))\n",
+    "    meta_df['calibration_value']=pd.Series([cal_value]*len(time_stamps))\n",
+    "    meta_df['researcher']=pd.Series(['SG']*len(time_stamps))\n",
+    "    \n",
     "    meta_df['onset_samples']=time_stamps.onset_samples\n",
     "    meta_df['offset_samples']=time_stamps.offset_samples\n",
-    "    meta_df['duration_samples']=time_stamps.offset_samples-time_stamps.onset_samples\n",
-    "    meta_df['sample_rate']=pd.Series([sample_rate]*len(time_stamps))\n",
-    "    meta_df['ref_value']=pd.Series([ref_value]*len(time_stamps))\n",
-    "    meta_df['cal_value']=pd.Series([cal_value]*len(time_stamps))\n",
-    "    meta_df['researcher']=pd.Series(['SG']*len(time_stamps))\n",
+    "    meta_df['number_of_samples']=time_stamps.offset_samples-time_stamps.onset_samples\n",
+    "    \n",
+    "    meta_df['onset_seconds']=time_stamps.onset\n",
+    "    meta_df['offset_seconds']=time_stamps.offset\n",
+    "    meta_df['duration_seconds']=meta_df.number_of_samples/meta_df.sample_rate\n",
+    "    \n",
+    "    meta_df['onset_absolute_time']=meta_df.onset_seconds + start_datetime_abs\n",
     "    \n",
     "    return meta_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "researcher='SG'\n",
     "meta_df=prep_metadata(time_stamps, sample_rate, ref_value, cal_value, researcher)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>segment_file</th>\n",
+       "      <th>wav_origin</th>\n",
+       "      <th>sample_rate</th>\n",
+       "      <th>reference_value</th>\n",
+       "      <th>calibration_value</th>\n",
+       "      <th>researcher</th>\n",
+       "      <th>onset_samples</th>\n",
+       "      <th>offset_samples</th>\n",
+       "      <th>number_of_samples</th>\n",
+       "      <th>onset_seconds</th>\n",
+       "      <th>offset_seconds</th>\n",
+       "      <th>duration_seconds</th>\n",
+       "      <th>onset_absolute_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC_84200000_84...</td>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC.wav</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>84200000</td>\n",
+       "      <td>84500001</td>\n",
+       "      <td>300001</td>\n",
+       "      <td>842</td>\n",
+       "      <td>845</td>\n",
+       "      <td>3.00001</td>\n",
+       "      <td>1.486200e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC_84900000_85...</td>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC.wav</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>84900000</td>\n",
+       "      <td>85200001</td>\n",
+       "      <td>300001</td>\n",
+       "      <td>849</td>\n",
+       "      <td>852</td>\n",
+       "      <td>3.00001</td>\n",
+       "      <td>1.486200e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC_85600000_85...</td>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC.wav</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>85600000</td>\n",
+       "      <td>85900001</td>\n",
+       "      <td>300001</td>\n",
+       "      <td>856</td>\n",
+       "      <td>859</td>\n",
+       "      <td>3.00001</td>\n",
+       "      <td>1.486200e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC_87000000_87...</td>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC.wav</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>87000000</td>\n",
+       "      <td>87300001</td>\n",
+       "      <td>300001</td>\n",
+       "      <td>870</td>\n",
+       "      <td>873</td>\n",
+       "      <td>3.00001</td>\n",
+       "      <td>1.486200e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC_87900000_88...</td>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC.wav</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>87900000</td>\n",
+       "      <td>88200001</td>\n",
+       "      <td>300001</td>\n",
+       "      <td>879</td>\n",
+       "      <td>882</td>\n",
+       "      <td>3.00001</td>\n",
+       "      <td>1.486200e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC_92600000_93...</td>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC.wav</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>92600000</td>\n",
+       "      <td>93000001</td>\n",
+       "      <td>400001</td>\n",
+       "      <td>926</td>\n",
+       "      <td>930</td>\n",
+       "      <td>4.00001</td>\n",
+       "      <td>1.486200e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC_95200000_95...</td>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC.wav</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>95200000</td>\n",
+       "      <td>95600001</td>\n",
+       "      <td>400001</td>\n",
+       "      <td>952</td>\n",
+       "      <td>956</td>\n",
+       "      <td>4.00001</td>\n",
+       "      <td>1.486200e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC_97100000_97...</td>\n",
+       "      <td>2017-02-04--10-14-06--00-16-35--BC.wav</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>97100000</td>\n",
+       "      <td>97500001</td>\n",
+       "      <td>400001</td>\n",
+       "      <td>971</td>\n",
+       "      <td>975</td>\n",
+       "      <td>4.00001</td>\n",
+       "      <td>1.486200e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        segment_file  \\\n",
+       "0  2017-02-04--10-14-06--00-16-35--BC_84200000_84...   \n",
+       "1  2017-02-04--10-14-06--00-16-35--BC_84900000_85...   \n",
+       "2  2017-02-04--10-14-06--00-16-35--BC_85600000_85...   \n",
+       "3  2017-02-04--10-14-06--00-16-35--BC_87000000_87...   \n",
+       "4  2017-02-04--10-14-06--00-16-35--BC_87900000_88...   \n",
+       "5  2017-02-04--10-14-06--00-16-35--BC_92600000_93...   \n",
+       "6  2017-02-04--10-14-06--00-16-35--BC_95200000_95...   \n",
+       "7  2017-02-04--10-14-06--00-16-35--BC_97100000_97...   \n",
+       "\n",
+       "                               wav_origin  sample_rate  reference_value  \\\n",
+       "0  2017-02-04--10-14-06--00-16-35--BC.wav       100000                1   \n",
+       "1  2017-02-04--10-14-06--00-16-35--BC.wav       100000                1   \n",
+       "2  2017-02-04--10-14-06--00-16-35--BC.wav       100000                1   \n",
+       "3  2017-02-04--10-14-06--00-16-35--BC.wav       100000                1   \n",
+       "4  2017-02-04--10-14-06--00-16-35--BC.wav       100000                1   \n",
+       "5  2017-02-04--10-14-06--00-16-35--BC.wav       100000                1   \n",
+       "6  2017-02-04--10-14-06--00-16-35--BC.wav       100000                1   \n",
+       "7  2017-02-04--10-14-06--00-16-35--BC.wav       100000                1   \n",
+       "\n",
+       "   calibration_value researcher  onset_samples  offset_samples  \\\n",
+       "0                  1         SG       84200000        84500001   \n",
+       "1                  1         SG       84900000        85200001   \n",
+       "2                  1         SG       85600000        85900001   \n",
+       "3                  1         SG       87000000        87300001   \n",
+       "4                  1         SG       87900000        88200001   \n",
+       "5                  1         SG       92600000        93000001   \n",
+       "6                  1         SG       95200000        95600001   \n",
+       "7                  1         SG       97100000        97500001   \n",
+       "\n",
+       "   number_of_samples  onset_seconds  offset_seconds  duration_seconds  \\\n",
+       "0             300001            842             845           3.00001   \n",
+       "1             300001            849             852           3.00001   \n",
+       "2             300001            856             859           3.00001   \n",
+       "3             300001            870             873           3.00001   \n",
+       "4             300001            879             882           3.00001   \n",
+       "5             400001            926             930           4.00001   \n",
+       "6             400001            952             956           4.00001   \n",
+       "7             400001            971             975           4.00001   \n",
+       "\n",
+       "   onset_absolute_time  \n",
+       "0         1.486200e+09  \n",
+       "1         1.486200e+09  \n",
+       "2         1.486200e+09  \n",
+       "3         1.486200e+09  \n",
+       "4         1.486200e+09  \n",
+       "5         1.486200e+09  \n",
+       "6         1.486200e+09  \n",
+       "7         1.486200e+09  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta_df"
    ]
   },
   {
@@ -393,14 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,27 +586,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      None\n",
-       "1      None\n",
-       "2      None\n",
-       "3      None\n",
-       "4      None\n",
-       "       ... \n",
-       "119    None\n",
-       "120    None\n",
-       "121    None\n",
-       "122    None\n",
-       "123    None\n",
-       "Length: 124, dtype: object"
+       "0    None\n",
+       "1    None\n",
+       "2    None\n",
+       "3    None\n",
+       "4    None\n",
+       "5    None\n",
+       "6    None\n",
+       "7    None\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
