--- a/Ringdown_analysis.ipynb
+++ b/Ringdown_analysis.ipynb
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
     "    \n",
     "    if len(y)>0:\n",
     "        # Convert to spectogram \n",
-    "        Y = librosa.stft(y, n_fft=1024, hop_length=32, win_length=500) \n",
+    "        Y = librosa.stft(y, n_fft=1024, hop_length=32, win_length=400) \n",
     "        Ydb = librosa.amplitude_to_db(abs(Y), ref=ref_value) # Try if it works leaving away abs!\n",
     "                                                   # Check whether reference should go in as amplitude or power\n",
     "        return Ydb\n",
@@ -517,24 +517,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0f15df2b8504386ab538039ba8850a0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'sample_rate' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-fae7e362fa88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mwav\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'2017-02-04--10-14-06--00-16-35--BC_97052456_97622778.wav'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopen_wav\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwav\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mYdb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_wav_to_spect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mref_value\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#if type(Ydb)!= None:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sample_rate' is not defined"
+     ]
     }
    ],
    "source": [
