create previews by combining spectograms into one figure

--- a/Spectograms.ipynb
+++ b/Spectograms.ipynb
@@ -15,8 +15,6 @@
    "source": [
     "import os\n",
     "import glob\n",
-    "#import numpy  as np\n",
-    "#import pandas as pd\n",
     "import librosa\n",
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
@@ -40,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d829e7c1e864c8cb0f60c1ee8954f13",
+       "model_id": "06b2179c8d9f44b88b0a0d3c5dd2230e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +181,7 @@
     "        \n",
     "        plt.colorbar()\n",
     "        plt.xlabel('time(seconds)')\n",
-    "        plt.ylabel('dB relative to {} {}**2'.format(ref, raw_unit))\n",
+    "        plt.ylabel('dB relative to {} {}^2'.format(ref, raw_unit))\n",
     "        plt.title('onset: {} (UTC) \\nduration: {} seconds'.format(onset_utc, duration_seconds))\n",
     "\n",
     "        # Save spectograms\n",
@@ -205,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
